<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TippMainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="279dp"
        android:layout_marginRight="279dp"
        android:layout_marginBottom="1326dp"
        android:fontFamily="casual"
        android:text="@string/want_some_tips"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="157dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/dogview1"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/icons8_dog_heart_64" />

        <Button
            android:id="@+id/button5"
            android:layout_width="10dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="launchDogTippMainActivity"
            android:text="@string/dogsbtn"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="900dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="1300dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="147dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:contentDescription="@string/catview1"
            app:srcCompat="@drawable/icons8_cat_64" />

        <Button
            android:id="@+id/button4"
            android:layout_width="10dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:onClick="launchCatTippMainActivity"
            android:text="@string/catsbtn"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>