<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="107dp"
        android:fontFamily="serif"
        android:text="@string/my_pet_diary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/add_a_new_pet"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/icons8_pets_64" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/my_pets"
                    app:srcCompat="@drawable/icons8_dog_collar_64" />

                <Button
                    android:id="@+id/newpetbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="false"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="casual"
                    android:onClick="launchNewPet"
                    android:text="@string/add_a_new_pet"
                    app:backgroundTint="#BC8DF1" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/mypetsbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="casual"
                android:gravity="center_horizontal"
                android:onClick="launchMyPets"
                android:text="@string/my_pets"
                app:backgroundTint="#BC8DF1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/my_pets"
                android:foregroundGravity="center_vertical"
                app:srcCompat="@drawable/icons8_footprint_scanning_64" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:clickable="true"
                android:focusable="true">

                <Button
                    android:id="@+id/trainingbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="false"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:onClick="launchTraining"
                    android:text="@string/training"
                    app:backgroundTint="#BC8DF1" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/training1"
                    app:srcCompat="@drawable/icons8_dog_training_50" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/tippsbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="false"
                    android:layout_marginStart="35dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:onClick="launchTipps"
                    android:text="@string/tipps"
                    app:backgroundTint="#BC8DF1" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/tipps_and_tricks"
                    app:srcCompat="@drawable/icons8_pets_60" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>